--- a/themes/dkan/css/dkan.css
+++ b/themes/dkan/css/dkan.css
@@ -169,6 +169,26 @@ em {
 .muted {
   color: #999999;
 }
+textarea, select, input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="email"], input[type="month"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="time"], input[type="url"], input[type="week"] {
+  -webkit-appearance: none;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 5px;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding;
+  background-clip: padding-box;
+  background-color: #fff;
+  border: 1px solid rgb(204, 204, 204);
+  color: #000;
+  outline: 0;
+  padding: 3px 5px;
+  font-size: 13px;
+  font-family: Arial, sans-serif;
+  height: 1.8em;
+}
 abbr[title] {
   cursor: help;
   border-bottom: 1px dotted #ddd;
@@ -1614,7 +1634,54 @@ html.js input.throbbing {
 .form-actions input {
   float: right;
 }
-
+input.form-submit {
+  background-color: #206B82;
+  background-image: -moz-linear-gradient(top, #30778D, #085871);
+  background-image: -ms-linear-gradient(top, #30778D, #085871);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#30778D), to(#085871));
+  background-image: -webkit-linear-gradient(top, #30778D, #085871);
+  background-image: -o-linear-gradient(top, #30778D, #085871);
+  background-image: linear-gradient(top, #30778D, #085871);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#30778d', endColorstr='#085871', GradientType=0);
+  border-color: #085871 #085871 #03202A;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  color: white;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  display: inline-block;
+  padding: 4px 10px 4px;
+  margin-bottom: 0;
+  font-size: 13px;
+  line-height: 18px;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: rgb(24, 86, 105);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#eaeaea', GradientType=0);
+  border-color: #EAEAEA #EAEAEA #C4C4C4;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  border: 1px solid #CCC;
+  border-bottom-color: #B3B3B3;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
+  -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
+}
+input.form-submit:hover {
+  text-decoration: none;
+  background-position: 0 -15px;
+  -webkit-transition: background-position 0.1s linear;
+  -moz-transition: background-position 0.1s linear;
+  -ms-transition: background-position 0.1s linear;
+  -o-transition: background-position 0.1s linear;
+  transition: background-position 0.1s linear;
+  background-color: rgb(24, 86, 105);
+}
 #dataset-node-form input[Value="Next: Add data"],
 #dataset-node-form input[Value="Finish"] {
   background-color: #206B82;
@@ -1707,6 +1774,10 @@ h2.block-title {
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#f0f0f0', GradientType=0);
 }
+.item-list ol li {
+  list-style-type: octal;
+  padding: 5px 0;
+}
 .block .item-list .facetapi-facetapi-links li {
   font-size: 12px;
   line-height: 1.1666666666666667em;
@@ -1714,7 +1785,7 @@ h2.block-title {
   border-bottom: 1px dotted #CCC;
   margin: 0;
 }
-.block .item-list li {
+.block .item-list ul li {
   font-size: 12px;
   line-height: 1.1666666666666667em;
   padding: 7px 25px;
